@@ -13,6 +13,7 @@
 2008-07-21  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* generic/tclFCmd.c: Inodes on windows are unreliable [Bug 2015723]
+	* tests/winFCmd.test: test rename with inode collision
 
 2008-07-21  Miguel Sofer  <msofer@users.sf.net>
 
